hphp/test/zend/bad/Zend/tests/dynamic_call_001.php
<?php 

class foo { 
	public function foo() {
	}	
}

$a = 'foo';

$a::$a();

?>